# kunjctl

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  esp  partitions-matter.csv  sdkconfig.defaults  sdkconfig.defaults.thread  xmake.lua
components/comms/: CMakeLists.txt  comms.c  idf_component.yml
components/comms/include/: comms.h
components/comms/proto/: messages.options  messages.pb.c  messages.pb.h  messages.proto
components/device_name/: CMakeLists.txt  device_name.c
components/device_name/include/: device_name.h
components/power_management/: CMakeLists.txt  power_management.c
components/power_management/include/: power_management.h
components/thread_comms/: CMakeLists.txt  idf_component.yml  thread_comms.c
components/thread_comms/include/: thread_comms.h
components/thread_comms/proto/: messages.options  messages.pb.c  messages.pb.h  messages.proto
hub/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml
hub/src/: main.c
main/: CMakeLists.txt  main.c  power_management.c  power_management.h
node/: CMakeLists.txt  Kconfig.projbuild  ble_adv.c  idf_component.yml  main.c  power_management.c  status.c  status.h
node/src/: ble_adv.h  device_name.c  device_name.h  main.c  power_management.c  power_management.h
node/src/comms/: comms.c  comms.h
node/src/inputs/: sensors.c  sensors.h
node/src/outputs/: status.c  status.h
node/src/proto/: messages.pb.c  messages.pb.h  messages.proto
node/src/state/: state.c  state.h
setups/: thread-border-router-board.md
setups/hub/esp32s3/: thread-border-router.conf
setups/node/esp32h2/: devkitm.conf
setups/thread-end-device/esp32h2/: devkitm.conf
setups/thread-rcp/esp32h2/: thread-border-router.conf
setups/thread-router/esp32h2/: thread-border-router.conf
setups/thread-router/esp32s3/: thread-border-router.conf
thread-end-device/: CMakeLists.txt  Kconfig.projbuild
thread-end-device/src/: main.c
thread-end-device/src/inputs/: sensors.c  sensors.h
thread-end-device/src/outputs/: relay.c  relay.h  status.c  status.h
thread-rcp/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml
thread-rcp/src/: esp_ot_config.h  main.c
thread-router/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml
thread-router/src/: bridge_nvs.cpp  bridge_nvs.hpp  bridge_state.cpp  bridge_state.hpp  main.c  main.cpp
thread-router/src/proto/: bridge_nvs.options  bridge_nvs.pb.c  bridge_nvs.pb.h  bridge_nvs.proto
